k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-backend-ingress
  namespace: ecommerce

  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: nginx

  rules:
    - host: api.<YOUR_DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend-ecommerce-service
                port:
                  number: 8080
