k8s/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-frontend-ingress
  namespace: ecommerce

spec:
  ingressClassName: nginx

  rules:
    - host: <YOUR_DOMAIN>
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: frontend-ecommerce-service
                port:
                  number: 80
